--- a/front/src/app/menu/menu.component.sass
+++ b/front/src/app/menu/menu.component.sass
@@ -1,6 +1,6 @@
 .menu
   background-color: #f0f1ec
-  height: 100%
+  height: 90vh
   width: 100%
   display: grid
   grid-template-areas: "add-book" "to-lib" "." "logout"
@@ -13,6 +13,7 @@
 .hidden
   transform: translateX(-100%)
   box-shadow: none
+  z-index: 99
 
 .add_new
   grid-area: add-book
@@ -39,6 +40,7 @@
   left: 0
   bottom: 0
   width: 10vw
+  z-index: 1000
 
 .button
   border-left: 2px solid black
